syntax = "proto3";

option go_package="./pb";
import "google/protobuf/timestamp.proto";
package pb;

message Product {
  int64 id = 1;
  string name = 2;
  int32 product_type = 3;
  int32 category_id = 4;
  double starting_price = 5;
  int32 total_stock = 6;
  string main_picture = 7;
  double remote_area_postage = 8;
  int32 single_buy_limit = 9;
  string remark = 10;
  google.protobuf.Timestamp  create_time = 11;
  google.protobuf.Timestamp  update_time = 12;
  int32 is_enable = 13;
  string create_user = 14;
  string update_user = 15;
}

message CreateProductReq {
  string name = 1;
  int32 product_type = 2;
  int32 category_id = 3;
  double starting_price = 4;
  int32 total_stock = 5;
  string main_picture = 6;
  double remote_area_postage = 7;
  int32 single_buy_limit = 8;
  string remark = 9;
}
message CreateProductResp {}

message GetProductListReq {}
message GetProductListResp {
  repeated Product ProductList = 1;
}

message DeleteProductReq {
  int64 id = 1;
}
message DeleteProductResp {}

message GetProductReq {
  int64 id = 1;
}
message GetProductResp {}


service product {
  rpc CreateProduct (CreateProductReq) returns (CreateProductResp);
  rpc GetProductList (GetProductListReq) returns (GetProductListResp);
  rpc DeleteProduct (DeleteProductReq) returns (DeleteProductResp);
  rpc GetProduct (GetProductReq) returns (GetProductResp);
}